Refactor PropTypes and React.createClass.

--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "1.0.0",
   "author": "Kentaro Matsushita",
   "dependencies": {
-    "gatsby": "^0.12.36",
+    "gatsby": "^0.12.46",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
-    "musubii": "^1.2.0",
-    "react-addons-shallow-compare": "^15.4.1",
-    "react-dates": "^4.1.0",
+    "musubii": "^2.0.0",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-addons-shallow-compare": "^15.5.2",
+    "react-dates": "^11.0.1",
+    "react-dom": "^15.5.4",
     "react-ga": "^2.1.2",
-    "react-helmet": "^3.2.2",
-    "react-highlight": "^0.9.0",
+    "react-helmet": "^5.0.3",
+    "react-highlight": "^0.10.0",
     "react-responsive-grid": "^0.3.3",
     "react-typography": "^0.15.0",
     "typography": "^0.15.0",
