--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
-blogTitle = "undefined"
-authorName = "kentaro-m"
-authorDetail = "I'm a application engineer."
+blogTitle = "RT狂の思考ログ"
+authorName = "wkwkrnht"
+authorDetail = "モバイル界隈のRT狂"
 linkPrefix = ""
 googleAnalyticsId = ""
 syntaxTheme = "atom-one-dark"
-twitterId = ""
+twitterId = "wkwkrnht"
 facebookId = ""
-githubId = "kentaro-m"
+githubId = "wkwkrnht"
